<resources>
    <string name="app_name">Maravilhas de Pernambuco</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_wonder">WonderActivity</string>
    <string name="description">Descrição</string>
    <string name="address">Endereço</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_natureza">Natureza</string>
    <string name="menu_religiosidade">Religiosidade</string>
    <string name="menu_historia_e_cultura">Hitória e Cultura</string>
    <string name="menu_eventos_e_diversao">Eventos e Diversão</string>
    <string name="menu_sobre">Sobre Nós</string>
</resources>
